[package]
name = "malobu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/malobu"
description = "Atomic MPMC Bus"
keywords = ["nonblocking", "multiplex", "buffer"]
categories = ["concurrency", "data-structures"]
exclude = ["Cargo.lock"]

[dependencies]
arc-swap = "1.7.1"
